# dotfiles

./: .gitignore  .sops.yaml  CLAUDE.md  README.md  bootstrap.sh  flake.nix  home.nix  identity.age  pyproject.toml
.scratch/ephemeral-shell/: map.md  spec.md
.scratch/ephemeral-shell/issues/: 01-isolation-mechanism-research.md  02-secrets-bootstrapping.md  03-session-inventory.md  04-package-install-mechanism.md  05-macos-research.md  06-module-preset-survival.md  07-fragment-composition.md  08-repo-distribution.md  09-launch-ux.md  10-preset-editing-ux.md  11-core-materialize-module.md  12-isolation-launcher.md  13-flake-package-assembly.md  14-secrets-bootstrap.md  15-end-to-end-launch-app.md  (+4 more)
bundles/claude-oauth/: files.json
bundles/devenv/: files.json
bundles/editor/: files.json
bundles/env/: files.json
bundles/litellm/: files.json
bundles/mise-claude/: files.json
bundles/terminal/: files.json
bundles/utils/: files.json
bundles/vcs/: files.json
bundles/work-tools/: files.json
lib/: files-activation.nix  module-options.nix  modules.nix  profile.nix
modules/claude-oauth/: default.nix  files.json  module.json
modules/devenv/: default.nix  files.json  module.json
modules/editor/: default.nix  module.json
modules/env/: default.nix  module.json
modules/terminal/: default.nix  module.json
modules/utils/: default.nix  module.json
modules/vcs/: default.nix  files.json  module.json
modules/work/: default.nix  files.json  module.json
pkg/dotfiles/: __init__.py  activate.py  testing.py
presets/: bastion.json  default.json  devbase.json  personal.json  work-direct.json  work-litellm.json  work.json  work1.json
tests/: conftest.py  test_agekey.py  test_edit.py  test_files.py  test_fragments.py  test_gitops.py  test_manifest.py  test_materialize.py  test_modules.py  test_profile.py  test_secrets.py  test_state.py  test_tui_smoke.py
(+77 files in other folders)
